--- a/blog.html
+++ b/blog.html
@@ -5,12 +5,12 @@
 		<meta charset="UTF-8">
 		<meta name="author" content="Vasco Alves">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" type="image/x-icon" href="./img/adidas.png">
+		<link rel="shortcut icon" type="image/x-icon" href="/img/star.png">
 	</head>
 <header>
-	<a href="/website/index.html"> Home</a>
+	<a href="/"> Home</a>
 	<ul class="navitems">
-		<li><a href="/website/blog.html"> Essays</a></li>
+		<li><a href="/blog"> Essays</a></li>
 		<li><a href=""> Network</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -19,6 +19,7 @@
 					<li><a href="">ﭮ Discord</a></li>
 				</ul>
 			</div>
+		<li><a href="/gallery"> Gallery</a></li>
 		<li><a href=""> Software</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -32,8 +33,8 @@
 </header>
 <body><div id=body><h1>Blog</h1>
 </ul><h2>2021</h2><ul class="ul1">
-<li>2021 Oct 31 - <a href="./articles/Learn-LaTeX-NOW.html">Learn LaTeX NOW</a></li>
-<li>2021 Oct 31 - <a href="./articles/Os-7-Dons[PT].html">Os-7-Dons[PT].html</a></li>
-<li>2021 Oct 27 - <a href="./articles/Should-I-use-Linux.html">Should I use Linux</a></li>
-<li>2021 Oct 27 - <a href="./articles/Vim-Is-The-Best!.html">Vim Is The Best!</a></li>
+<li>2021 Nov 06 - <a href="./articles/Learn-LaTeX-NOW.html">Learn LaTeX NOW</a></li>
+<li>2021 Nov 06 - <a href="./articles/Os-7-Dons[PT].html">Os-7-Dons[PT].html</a></li>
+<li>2021 Nov 06 - <a href="./articles/Should-I-use-Linux.html">Should I use Linux</a></li>
+<li>2021 Nov 06 - <a href="./articles/Vim-Is-The-Best!.html">Vim Is The Best!</a></li>
 </ul></div></body>
