--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 
 	<!DOCTYPE html><html lang=en><head>
-		<title>Learn LaTeX NOW</title>
-		<link rel="stylesheet" href="../style.css">
+		<title>Gallery</title>
+		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8">
 		<meta name="author" content="Vasco Alves">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,18 @@
 </header>
 <body>
 	<div id="body">
-		<embed src="http://example.com/the.pdf" type="application/pdf">
+		<h1>Image Gallery</h1>
+		<div class="gallery">
+			<img src="./img/1.jpg" alt="" />
+			<img src="./img/2.jpg" alt="" />
+			<img src="./img/3.jpg" alt="" />
+			<img src="./img/4.jpg" alt="" />
+			<img src="./img/6.jpg" alt="" />
+			<img src="./img/7.jpg" alt="" />
+			<img src="./img/8.jpg" alt="" />
+			<img src="./img/9.jpg" alt="" />
+		</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ornare, massa at egestas eleifend, velit odio facilisis metus, eget pretium mauris tellus sed nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent tincidunt fermentum blandit. Quisque convallis diam sed leo tincidunt suscipit. In tincidunt nisi id gravida ultrices. Integer aliquam tellus quis ipsum luctus scelerisque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In posuere luctus risus, id ultricies libero tristique eu. Aliquam eget venenatis eros. Sed id aliquet augue.</p>
 	</div>
 </body>
 <footer>
