--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 
 	<!DOCTYPE html><html lang=en><head>
-		<title>index.html</title>
+		<title>Index</title>
 		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8">
 		<meta name="author" content="Vasco Alves">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" type="image/x-icon" href="./img/adidas.png">
+		<link rel="shortcut icon" type="image/x-icon" href="/img/star.png">
 	</head>
 <header>
-	<a href="/website/index.html"> Home</a>
+	<a href="/"> Home</a>
 	<ul class="navitems">
-		<li><a href="/website/blog.html"> Essays</a></li>
+		<li><a href="/blog"> Essays</a></li>
 		<li><a href=""> Network</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -19,6 +19,7 @@
 					<li><a href="">ﭮ Discord</a></li>
 				</ul>
 			</div>
+		<li><a href="/gallery"> Gallery</a></li>
 		<li><a href=""> Software</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -30,18 +31,20 @@
 	</ul>
 	<button> RSS</button>
 </header>
-<style>	body { background-image: url("img/bg1.jpg") } </style>
+<script defer src="index.js"></script>
+<style>	div.parallax { background-image: url("img/bg2.jpg") } </style>
 <body>
-	<div class="bg-image"></div>
+	<div class="parallax">
+		<div class="transparent-container">
+			<h1>Wellcome to my website</h1> <br>
+			<h2>Website Visits: <span class="website-counter"></span></h2>
+		</div>
+	</div>
+
 	<div id="body" class="overlay-bg">
 		<h1>Home</h1>
-
-
-
 		<div class="card">
-
 			<h2>亮 Articles</h2>
-
 			<details><summary> Tutorials</summary>
 				<ul class="ul2">
 					<li><a href="articles/linux.html"> Linux</a></li>
@@ -52,14 +55,13 @@
 
 			<details><summary> Technology</summary>
 				<ul class="ul2">
-					<li><a href="">Thinkpads</a></li>
-					<li><a href="">The market of flees</a></li>
+					<li><a href="">The Old Thinkpads</a></li>
 				</ul>
 			</details>
 			<details><summary> Personal</summary>
 				<ul class="ul2">
-					<li><a href="">The four causes</a></li>
-					<li><a href="">The market of flees</a></li>
+					<li><a href="">Towards independence?</a></li>
+					<li><a href="">Kill one self!</a></li>
 				</ul>
 			</details>
 			<details><summary> Philosophy</summary>
