--- a/blog.html
+++ b/blog.html
@@ -8,9 +8,9 @@
 		<link rel="shortcut icon" type="image/x-icon" href="/img/star.png">
 	</head>
 <header>
-	<a href="/"> Home</a>
+	<a href="/website"> Home</a>
 	<ul class="navitems">
-		<li><a href="/blog"> Essays</a></li>
+		<li><a href="/website/blog"> Blog</a></li>
 		<li><a href=""> Network</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -19,7 +19,7 @@
 					<li><a href="">ﭮ Discord</a></li>
 				</ul>
 			</div>
-		<li><a href="/gallery"> Gallery</a></li>
+		<li><a href="/website/gallery"> Gallery</a></li>
 		<li><a href=""> Software</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -33,8 +33,8 @@
 </header>
 <body><div id=body><h1>Blog</h1>
 </ul><h2>2021</h2><ul class="ul1">
-<li>2021 Nov 06 - <a href="./articles/Learn-LaTeX-NOW.html">Learn LaTeX NOW</a></li>
 <li>2021 Nov 06 - <a href="./articles/Os-7-Dons[PT].html">Os-7-Dons[PT].html</a></li>
 <li>2021 Nov 06 - <a href="./articles/Should-I-use-Linux.html">Should I use Linux</a></li>
 <li>2021 Nov 06 - <a href="./articles/Vim-Is-The-Best!.html">Vim Is The Best!</a></li>
+<li>2021 Nov 22 - <a href="./articles/exemplo-1.html">Exemplo 1</a></li>
 </ul></div></body>
