--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<link rel="shortcut icon" type="image/x-icon" href="/img/star.png">
 	</head>
 <header>
-	<a href="/"> Home</a>
+	<a href="/website"> Home</a>
 	<ul class="navitems">
-		<li><a href="/blog"> Essays</a></li>
+		<li><a href="/website/blog"> Blog</a></li>
 		<li><a href=""> Network</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -19,7 +19,7 @@
 					<li><a href="">ﭮ Discord</a></li>
 				</ul>
 			</div>
-		<li><a href="/gallery"> Gallery</a></li>
+		<li><a href="/website/gallery"> Gallery</a></li>
 		<li><a href=""> Software</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -40,28 +40,20 @@
 			<h2>Website Visits: <span class="website-counter"></span></h2>
 		</div>
 	</div>
-
-	<div id="body" class="overlay-bg">
+	<div id="body">
 		<h1>Home</h1>
 		<div class="card">
 			<h2>亮 Articles</h2>
-			<details><summary> Tutorials</summary>
+			<details><summary> Technology</summary>
 				<ul class="ul2">
 					<li><a href="articles/linux.html"> Linux</a></li>
 					<li><a href="articles/suckless.html"> Suckless Software</a></li>
 					<li><a href="articles/vim.html"> Vim</a></li>
 				</ul>
 			</details>
-
-			<details><summary> Technology</summary>
-				<ul class="ul2">
-					<li><a href="">The Old Thinkpads</a></li>
-				</ul>
-			</details>
 			<details><summary> Personal</summary>
 				<ul class="ul2">
-					<li><a href="">Towards independence?</a></li>
-					<li><a href="">Kill one self!</a></li>
+					<li><a href="">Old Thinkpads</a></li>
 				</ul>
 			</details>
 			<details><summary> Philosophy</summary>
