--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="author" content="Vasco Alves">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" type="image/x-icon" href="/img/star.png">
+		<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
 	</head>
 <header>
 	<a href="/website"> Home</a>
@@ -48,7 +48,7 @@
 	</div>
 </body>
 <footer>
-	<div class="footer">based.com</div>
+	<div class="footer"></div>
 	<div class="footer">
 		<ul class="block">
 			<li><a href="" style="background:#4E5D94">ﭮ Discord</a></li>
@@ -57,5 +57,5 @@
 			<li><a href="" style="background:#22272e"> Github</a></li>
 		</ul>
 	</div>
-	<div class="footer"><img src="/img/wifi.gif" alt="wifi.gif" /></div>
+	<div class="footer"><img src="/website/img/wifi.gif" alt="wifi.gif" /></div>
 </footer>
