--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="author" content="Vasco Alves">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" type="image/x-icon" href="/img/star.png">
+		<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
 	</head>
 <header>
 	<a href="/website"> Home</a>
