--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,14 @@
 
-	<!DOCTYPE html><html lang=en><head>
-		<title>Gallery</title>
-		<link rel="stylesheet" href="style.css">
-		<meta charset="UTF-8">
-		<meta name="author" content="Vasco Alves">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
-	</head>
+<!DOCTYPE html>
+<html lang=en>
+<head>
+	<title>Gallery</title>
+	<link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="author" content="Vasco Alves">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
+</head>
 <header>
 	<a href="/website"> Home</a>
 	<ul class="navitems">
