--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 
-	<!DOCTYPE html><html lang=en><head>
-		<title>Index</title>
-		<link rel="stylesheet" href="style.css">
-		<meta charset="UTF-8">
-		<meta name="author" content="Vasco Alves">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
-	</head>
+<!DOCTYPE html>
+<html lang=en>
+<head>
+	<title>Index</title>
+	<link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="author" content="Vasco Alves">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
+</head>
 <header>
 	<a href="/website"> Home</a>
 	<ul class="navitems">
@@ -36,47 +38,37 @@
 <body>
 	<div class="parallax">
 		<div class="transparent-container">
-			<h1>Wellcome to my website</h1> <br>
-			<h2>Website Visits: <span class="website-counter"></span></h2>
+			<h1><span class=still-glow>//</span> <span class="glow">Website</span></h1> <br>
+			<h2><span class=still-glow>Website Visits: <span class="website-counter glow"></span></h2>
 		</div>
 	</div>
 	<div id="body">
 		<h1>Home</h1>
 		<div class="card">
-			<h2>亮 Articles</h2>
-			<details><summary> Technology</summary>
-				<ul class="ul2">
-					<li><a href="articles/linux.html"> Linux</a></li>
-					<li><a href="articles/suckless.html"> Suckless Software</a></li>
-					<li><a href="articles/vim.html"> Vim</a></li>
-				</ul>
-			</details>
-			<details><summary> Personal</summary>
-				<ul class="ul2">
-					<li><a href="">Old Thinkpads</a></li>
-				</ul>
-			</details>
-			<details><summary> Philosophy</summary>
-				<ul class="ul2">
-					<li><a href="">The four causes</a></li>
-					<li><a href="">The market of flees</a></li>
-				</ul>
-			</details>
+	 		<h2>亮 Recent Articles</h2>
+			<ul class="ul2">
+				<li>14 Nov<a href="./articles/Learn-Typesetting.html">Learn typesetting with LaTeX</a></li>
+				<li>03 Sep<a href="./articles/The-4-Causes.html">The 4 Causes</a></li>
+				<li>28 Aug<a href="./articles/exemplo-1.html">Exemplo</a></li>
+				<li>13 Aug<a href="./articles/veganism-is-the-pinnacle-of-bugmanism.html">Veganism is the peak of bugmanism</a></li>
+			        <li><strong><a href="./blog">See all other blog posts...</a></strong></li>
+			</ul>
 		</div>
 
 		<div class="card">
 		<h2>Network</h2>
-			<ul class="block">
-				<li><a href="" style="background:#22272e"> Github</a></li>
-
-			</ul>
+			<details><summary>Links</summary>
+				<ul class="ul2">
+					<li><a href="" style="background:#4E5D94;color:#ebdbb2">ﭮ Discord</a></li>
+					<li><a href="" style="background:#c00000;color:#ebdbb2"> YouTube</a></li>
+					<li><a href="" style="background:#2a5885;color:#ebdbb2"> VK</a></li>
+					<li><a href="" style="background:#22272e;color:#ebdbb2"> Github</a></li>
+				</ul>
+			</details>
+			<details><summary>XMR - Click to reveal</summary>
+				<a>83ezNAZiZP5XibtkLCm9VV5hSTCxpMEvz3L8mAiVkPUnX1xqjMeUjXAjjhhd18htTZA8oqkixDREeKyWVsihNMLVLkFNMhW</a>
+			</details>
 		</div>
-
-		<!-- img src="img/bg2.jpg"  class="img-right" /-->
-		<p></p>
-
-		<h3>XMR</h3>
-		<p>83ezNAZiZP5XibtkLCm9VV5hSTCxpMEvz3L8mAiVkPUnX1xqjMeUjXAjjhhd18htTZA8oqkixDREeKyWVsihNMLVLkFNMhW</p>
 	</div>
 </body>
 <footer>
