--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,13 @@
-
-	<!DOCTYPE html><html lang=en><head>
-		<title>Articles</title>
-		<link rel="stylesheet" href="style.css">
-		<meta charset="UTF-8">
-		<meta name="author" content="Vasco Alves">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
-	</head>
+<!DOCTYPE html>
+<html lang=en>
+<head>
+	<title>Articles</title>
+	<link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="author" content="Vasco Alves">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
+</head>
 <header>
 	<a href="/website"> Home</a>
 	<ul class="navitems">
@@ -33,8 +34,8 @@
 </header>
 <body><div id=body><h1>Blog</h1>
 </ul><h2>2021</h2><ul class="ul1">
-<li>2021 Nov 06 - <a href="./articles/Os-7-Dons[PT].html">Os-7-Dons[PT].html</a></li>
-<li>2021 Nov 06 - <a href="./articles/Should-I-use-Linux.html">Should I use Linux</a></li>
-<li>2021 Nov 06 - <a href="./articles/Vim-Is-The-Best!.html">Vim Is The Best!</a></li>
+<li>2021 Nov 23 - <a href="./articles/Learn-Typesetting.html">Learn Typesetting</a></li>
+<li>2021 Nov 23 - <a href="./articles/The-4-Causes.html">The 4 Causes</a></li>
 <li>2021 Nov 22 - <a href="./articles/exemplo-1.html">Exemplo 1</a></li>
+<li>2021 Nov 23 - <a href="./articles/veganism-is-the-pinnacle-of-bugmanism.html">Veganism is the pinnacle of bugmanism</a></li>
 </ul></div></body>
