--- a/index.html
+++ b/index.html
@@ -37,20 +37,16 @@
 <style>	div.parallax { background-image: url("img/bg2.jpg") } </style>
 <body>
 	<div class="parallax">
-		<div class="transparent-container">
-			<h1><span class=still-glow>//</span> <span class="glow">Website</span></h1> <br>
-			<h2><span class=still-glow>Website Visits: <span class="website-counter glow"></span></h2>
-		</div>
 	</div>
 	<div id="body">
 		<h1>Home</h1>
 		<div class="card">
 	 		<h2>亮 Recent Articles</h2>
-			<ul class="ul2">
-				<li>14 Nov<a href="./articles/Learn-Typesetting.html">Learn typesetting with LaTeX</a></li>
-				<li>03 Sep<a href="./articles/The-4-Causes.html">The 4 Causes</a></li>
-				<li>28 Aug<a href="./articles/exemplo-1.html">Exemplo</a></li>
-				<li>13 Aug<a href="./articles/veganism-is-the-pinnacle-of-bugmanism.html">Veganism is the peak of bugmanism</a></li>
+			<ul class="ul1">
+				<li>14 Nov - <a href="./articles/Learn-Typesetting.html">Learn typesetting with LaTeX</a></li>
+				<li>03 Sep - <a href="./articles/The-4-Causes.html">The 4 Causes</a></li>
+				<li>28 Aug - <a href="./articles/exemplo-1.html">Exemplo</a></li>
+				<li>13 Aug - <a href="./articles/veganism-is-the-pinnacle-of-bugmanism.html">Veganism is the peak of bugmanism</a></li>
 			        <li><strong><a href="./blog">See all other blog posts...</a></strong></li>
 			</ul>
 		</div>
