--- a/blog.html
+++ b/blog.html
@@ -9,9 +9,9 @@
 	<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
 </head>
 <header>
-	<a href="/website"> Home</a>
+	<a href="/based.com"> Home</a>
 	<ul class="navitems">
-		<li><a href="/website/blog"> Blog</a></li>
+		<li><a href="/based.com/blog"> Blog</a></li>
 		<li><a href=""> Network</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -20,7 +20,7 @@
 					<li><a href="">ﭮ Discord</a></li>
 				</ul>
 			</div>
-		<li><a href="/website/gallery"> Gallery</a></li>
+		<li><a href="/based.com/gallery"> Gallery</a></li>
 		<li><a href=""> Software</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -34,8 +34,8 @@
 </header>
 <body><div id=body><h1>Blog</h1>
 </ul><h2>2022</h2><ul class="ul1">
-<li>2022 Jan 04 - <a href="./articles/Learn-Typesetting.html">Learn Typesetting</a></li>
-<li>2022 Jan 04 - <a href="./articles/The-4-Causes.html">The 4 Causes</a></li>
-<li>2022 Jan 04 - <a href="./articles/exemplo-1.html">Exemplo 1</a></li>
-<li>2022 Jan 04 - <a href="./articles/veganism-is-the-pinnacle-of-bugmanism.html">Veganism is the pinnacle of bugmanism</a></li>
+<li>2021 Nov 23 - <a href="./articles/Learn-Typesetting.html">Learn Typesetting</a></li>
+<li>2021 Nov 23 - <a href="./articles/The-4-Causes.html">The 4 Causes</a></li>
+<li>2021 Nov 22 - <a href="./articles/exemplo-1.html">Exemplo 1</a></li>
+<li>2021 Nov 23 - <a href="./articles/veganism-is-the-pinnacle-of-bugmanism.html">Veganism is the pinnacle of bugmanism</a></li>
 </ul></div></body>
