--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
 </head>
 <header>
-	<a href="/website"> Home</a>
+	<a href="/based.com"> Home</a>
 	<ul class="navitems">
-		<li><a href="/website/blog"> Blog</a></li>
+		<li><a href="/based.com/blog"> Blog</a></li>
 		<li><a href=""> Network</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -21,7 +21,7 @@
 					<li><a href="">ﭮ Discord</a></li>
 				</ul>
 			</div>
-		<li><a href="/website/gallery"> Gallery</a></li>
+		<li><a href="/based.com/gallery"> Gallery</a></li>
 		<li><a href=""> Software</a>
 			<div class="sub-menu-1">
 				<ul>
@@ -77,5 +77,5 @@
 			<li><a href="" style="background:#22272e"> Github</a></li>
 		</ul>
 	</div>
-	<div class="footer"><img src="/website/img/wifi.gif" alt="wifi.gif" /></div>
+	<div class="footer"><img src="/based.com/img/wifi.gif" alt="wifi.gif" /></div>
 </footer>
