--- a/index.html
+++ b/index.html
@@ -10,72 +10,66 @@
 	<link rel="shortcut icon" type="image/x-icon" href="./img/star.png">
 </head>
 <header>
-	<a href="/based.com"> Home</a>
+	<a href="/based.com">Home</a>
 	<ul class="navitems">
-		<li><a href="/based.com/blog"> Blog</a></li>
-		<li><a href=""> Network</a>
+		<li><a href="/based.com/blog">Blog</a></li>
+		<li><a href="">Network</a>
 			<div class="sub-menu-1">
 				<ul>
-					<li><a href=""> YouTube</a></li>
-					<li><a href="">啕 VK</a></li>
-					<li><a href="">ﭮ Discord</a></li>
+					<li><a href="">YouTube</a></li>
+					<li><a href="">VK</a></li>
+					<li><a href="">Discord</a></li>
 				</ul>
 			</div>
-		<li><a href="/based.com/gallery"> Gallery</a></li>
-		<li><a href=""> Software</a>
+		<li><a href="/based.com/gallery">Gallery</a></li>
+		<li><a href="">Software</a>
 			<div class="sub-menu-1">
 				<ul>
-					<li><a href=""> Github</a></li>
+					<li><a href="">Github</a></li>
 				</ul>
 			</div>
 		</li>
 		<li><a href=".html"></a></li>
 	</ul>
-	<button> RSS</button>
+	<button>RSS</button>
 </header>
-<script defer src="index.js"></script>
-<style>	div.parallax { background-image: url("img/bg2.jpg") } </style>
 <body>
-	<div class="parallax">
-	</div>
 	<div id="body">
 		<h1>Home</h1>
-		<div class="card">
-	 		<h2>亮 Recent Articles</h2>
-			<ul class="ul1">
-				<li>14 Nov - <a href="./articles/Learn-Typesetting.html">Learn typesetting with LaTeX</a></li>
-				<li>03 Sep - <a href="./articles/The-4-Causes.html">The 4 Causes</a></li>
-				<li>28 Aug - <a href="./articles/exemplo-1.html">Exemplo</a></li>
-				<li>13 Aug - <a href="./articles/veganism-is-the-pinnacle-of-bugmanism.html">Veganism is the peak of bugmanism</a></li>
-			        <li><strong><a href="./blog">See all other blog posts...</a></strong></li>
-			</ul>
-		</div>
 
-		<div class="card">
+		<h2>亮 Recent Articles</h2>
+
+		<ul class="ul1">
+			<li>14 Nov - <a href="./articles/Learn-Typesetting.html">Learn typesetting with LaTeX</a></li>
+			<li>03 Sep - <a href="./articles/The-4-Causes.html">The 4 Causes</a></li>
+			<li>28 Aug - <a href="./articles/exemplo-1.html">Exemplo</a></li>
+			<li>13 Aug - <a href="./articles/veganism-is-the-pinnacle-of-bugmanism.html">Veganism is the peak of bugmanism</a></li>
+		        <li><strong><a href="./blog">See all other blog posts...</a></strong></li>
+		</ul>
+
 		<h2>Network</h2>
-			<details><summary>Links</summary>
-				<ul class="ul2">
-					<li><a href="" style="background:#4E5D94;color:#ebdbb2">ﭮ Discord</a></li>
-					<li><a href="" style="background:#c00000;color:#ebdbb2"> YouTube</a></li>
-					<li><a href="" style="background:#2a5885;color:#ebdbb2"> VK</a></li>
-					<li><a href="" style="background:#22272e;color:#ebdbb2"> Github</a></li>
-				</ul>
-			</details>
-			<details><summary>XMR - Click to reveal</summary>
-				<a>83ezNAZiZP5XibtkLCm9VV5hSTCxpMEvz3L8mAiVkPUnX1xqjMeUjXAjjhhd18htTZA8oqkixDREeKyWVsihNMLVLkFNMhW</a>
-			</details>
+			<ul>
+				<li><a href="" style="color:#4E5D94;">Discord</a></li>
+				<li><a href="" style="color:#c00000;">YouTube</a></li>
+				<li><a href="" style="color:#2a5885;">VK</a></li>
+				<li><a href="" style="color:#22272e;">Github</a></li>
+			</ul>
+		<details><summary>XMR - Click to reveal</summary>
+		83ezNAZiZP5XibtkLCm9VV5hSTCxpMEvz3L8mAiVkPUnX1xqjMeUjXAjjhhd18htTZA8oqkixDREeKyWVsihNMLVLkFNMhW
+		</details>
 		</div>
 	</div>
 </body>
+	<hr style="min-width:50rem;max-width:800px;">
 <footer>
 	<div class="footer"></div>
 	<div class="footer">
 		<ul class="block">
-			<li><a href="" style="background:#4E5D94">ﭮ Discord</a></li>
-			<li><a href="" style="background:#c00000"> YouTube</a></li>
-			<li><a href="" style="background:#2a5885"> VK</a></li>
-			<li><a href="" style="background:#22272e"> Github</a></li>
+			<li><a href="" style="color:#4E5D94;">Discord</a></li>
+			<li><a href="" style="color:#c00000;">YouTube</a></li>
+			<li><a href="" style="color:#2a5885;">VK</a></li>
+			<li><a href="" style="color:#22272e;">Github</a></li>
 		</ul>
 	</div>
-	<div class="footer"><img src="/based.com/img/wifi.gif" alt="wifi.gif" /></div>
+	<div class="footer"></div>
 </footer>
