added two articles

--- a/blog.html
+++ b/blog.html
@@ -37,5 +37,7 @@
 <li>2021 Nov 23 - <a href="./articles/Learn-Typesetting.html">Learn Typesetting</a></li>
 <li>2021 Nov 23 - <a href="./articles/The-4-Causes.html">The 4 Causes</a></li>
 <li>2021 Nov 22 - <a href="./articles/exemplo-1.html">Exemplo 1</a></li>
+<li>2022 Jan 04 - <a href="./articles/hedonism-asceticism-and-the-hermetic-answer.html">Hedonism asceticism and the hermetic answer</a></li>
+<li>2022 Jan 04 - <a href="./articles/notes-on-learning-languages.html">Notes on learning languages</a></li>
 <li>2022 Jan 04 - <a href="./articles/veganism-is-the-pinnacle-of-bugmanism.html">Veganism is the pinnacle of bugmanism</a></li>
 </ul></div></body>
